# 2Much2Read

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: validation.yml
config/: 2bored1made.env.example  2busy1miss.env.example  2busy1miss.reminders.example.yaml  2much2read.env.example  sources.example.yaml
deploy/systemd/: 2busy1miss-agenda.service  2busy1miss-runtime-agenda.service  2busy1miss-runtime-agenda.timer  2busy1miss-runtime.service  2busy1miss-runtime.timer  2busy1miss.service  2busy1miss.timer  2much2read-runtime.service  2much2read-runtime.timer  2much2read.service  2much2read.timer  newsletter-digest.service  newsletter-digest.timer
scripts/: backfill_category_labels.py  cleanup_test_environment.py  install-2bored1made.sh  install-2busy1miss-user-service.sh  install-2much2read-user-service.sh  install-user-service.sh  legacy_cleanup.sh  uninstall-2busy1miss-user-service.sh  uninstall-2much2read-user-service.sh  uninstall-user-service.sh
src/common/: __init__.py  discord.py
src/newsletter_digest/: __init__.py  cli.py  config.py  digest.py  discord.py  gmail.py  locking.py  mime.py  ollama.py  operations.py  pipeline.py  storage.py
src/two_bored_one_made/: __init__.py  cli.py  config.py
src/two_busy_one_miss/: __init__.py  cli.py  config.py  google_calendar.py  pipeline.py  renderer.py  rules.py  storage.py
src/two_much_two_read/: __init__.py  cli.py  command_models.py  config.py  diagnostics.py  gmail.py  hackernews.py  mail_operations.py  migrate.py  mime.py  ollama.py  operations.py  paths.py  pipeline.py  schemas.py  storage.py  subscription_operations.py
src/two_read_runtime/: __init__.py  discord.py  locking.py  oauth.py  paths.py  progress.py
tests/: conftest.py  test_2bored1made_cli.py  test_2bored1made_config.py  test_2busy1miss_cli.py  test_2busy1miss_config.py  test_2busy1miss_pipeline.py  test_2busy1miss_renderer.py  test_2busy1miss_rules.py  test_2busy1miss_storage.py  test_cleanup_test_environment.py  test_cli.py  test_config.py  test_diagnostics.py  test_digest.py  test_discord.py  test_gmail.py  test_hackernews.py  test_installers.py  test_locking.py  test_mime.py  test_oauth.py  test_ollama.py  test_pipeline.py  test_progress.py  test_runtime_migrate.py  test_storage.py  test_subscription_operations.py
